# embedded-cmake

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  main.c
app/: CMakeLists.txt  application.c  application.h  common_type.c  common_type.h  version.h
app/button/: button.h
app/debug/: log_libs.h
app/io_mock/: io_mock.c
app/mocks/: button_mock.c  delay_mock.c  timer_mock.c
app/utils/: app_utils.c  app_utils.h  timer.h
desktop/: main.c
libs/SoftwareTimer/include/: SoftTimers.h
test/: io_mock_test.c
